<resources>
    <string name="app_name">ПенсияСиловиков</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Настройки</string>
    <string name="menu_pensia_calc">Расчет по выслуге лет</string>
    <string name="menu_spr_pensia">Справочник</string>
    <string name="menu_setting">Настройки</string>
    <string name="menu_setting_dopol">Дополнение</string>
    <string name="menu_communication">Общение</string>
    <string name="menu_send">Поделиться</string>
    <string name="menu_rate">Оценить</string>
    <string name="menu_message">Сообщения</string>
    <string name="dialog_button_delete">удалить</string>
    <string name="dialog_button_close">закрыть</string>
    <string name="hello_blank_fragment_1">Hello blank fragment 1</string>
    <string name="hello_blank_fragment_2">Hello blank fragment 2</string>
    <string name="hello_blank_fragment_3">Hello blank fragment 3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pcalc_date_raschet">Дата расчета ден. довольствия</string>
    <string name="pcalc_oklad_zavan">Оклад по званию</string>
    <string name="pcalc_oklad_dolg">Оклад по должности</string>
    <string name="pcalc_visl_for_procent_nadb">Выслуга лет для % надбавки</string>
    <string name="pcalc_calend_visluga">Календарная или льготная выслуга</string>
    <string name="pcalc_visluga_trud">Общий трудовой стаж. 25 лет и более трудового стажа.</string>
    <string name="pcalc_raschet_visluga_trud">по смешанному стажу</string>
    <string name="pcalc_result">Расчет</string>
    <string name="pcalc_result_text">Итого : %s</string>
    <string name="pcalc_nadb_vet_war">Ветеран боевых действий</string>
    <string name="pcalc_nadb_raion_koeff">Районный коэффициент (%s%%)</string>
    <string name="pcalc_nadb_raion_koeff_1">Районный коэффициент</string>
    <string name="pcalc_procent_for_pensi">% для начисления денежного довольствия</string>
    <string name="pcalc_nadb_visl_for_pensi">Надбавка за выслугу лет (%s%%)</string>
    <string name="pcalc_sum_den_dovi">Сумма денежного довольствия</string>
    <string name="pcalc_den_dovi">Денежное довольствие</string>
    <string name="pcalc_oklady">Оклады</string>
    <string name="pcalc_visluga">Выслуга</string>
    <string name="pcalc_procent_for_ischisl_pensi">% для начисления пенсии</string>
    <string name="pcalc_nadbavki">Надбавки</string>
    <string name="pcalc_rashet_pens">Расчет пенсии</string>
    <string name="pcalc_sum_den_dov_for_isch">Ден.дов. для исчис. пенсии (%s%%)</string>
    <string name="pcalc_razm_v_procent">Размер пенсии в процентах</string>
    <string name="pcalc_razm_pensii">Размер пенсии</string>
    <string name="pcalc_razm_pensii_ural_koff">Размер пенсии с учетом рай.коэф</string>
    <string name="pcalc_razm_min_pensii">Размер минимальной пенсии</string>
    <string name="pcalc_nadb">Надбавки</string>
    <string name="pcalc_nadb_VBD">Ветеран боевых действий (ст.45 г) %s</string>
    <string name="pcalc_nadb_17B">Неработающим пенсионерам, на иждевенцев (ст.17 б) %s</string>
    <string name="pcalc_nadb_17B_text">Количество иждевенцев (для не работающих)</string>
    <string-array name="pcalc_ar_vid_pensii">
        <item> Расчет по выслуге</item>
        <item> Справочник по расчету пенсии и надбавок</item>
        <item> Дополнение</item>
    </string-array>
    <string name="pcalc_pod_zago_vid_pens">Расчет по выслуге</string>
    <string name="pcalc_pod_zago_help">Справочник по расчету пенсии и надбавок</string>
    <string name="pcalc_pod_zago_pay">Дополнение</string>
    <string-array name="pcalc_ar_data_pocent_raion">
        <item>0</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
    </string-array>
    <string-array name="pcalc_result_data_calc_pensia_struc">
        <item>Районный коэффициент</item>
        <item>Ден.дов. для иссчисления пенсии</item>
        <item>Размер пенсии в процентах</item>
        <item>Размер минимальной пенсии</item>
        <item>Размер пенсии</item>
        <item>Размер пенсии с учетом рай.коэф</item>
    </string-array>
    <string-array name="pcalc_date_den_dov">
        <item>до 01.01.2018 года</item>
        <item>с 01.01.2018 года</item>
    </string-array>
    <string-array name="pcalc_ar_data_zvan_0118">
        <item>рядовой;5200</item>
        <item>курсант;5200</item>
        <item>ефрейтор;5720</item>
        <item>младший сержант;6240</item>
        <item>сержант;6760</item>
        <item>старший сержант;7280</item>
        <item>старшина;7800</item>
        <item>прапорщик;8320</item>
        <item>старший прапорщик;8840</item>
        <item>младший лейтенант;9880</item>
        <item>лейтенант;10400</item>
        <item>старший лейтенант;10920</item>
        <item>капитан;11440</item>
        <item>майор;11960</item>
        <item>подполковник;12480</item>
        <item>полковник;13520</item>
        <item>генерал-майор;20800</item>
        <item>генерал-лейтенант;22880</item>
        <item>генерал-полковник;26000</item>
        <item>генерал армии;28080</item>
    </string-array>
    <string-array name="pcalc_ar_data_zvan">
        <item>рядовой;5000</item>
        <item>курсант;5000</item>
        <item>ефрейтор;5500</item>
        <item>младший сержант;6000</item>
        <item>сержант;6500</item>
        <item>старший сержант;7000</item>
        <item>старшина;7500</item>
        <item>прапорщик;8000</item>
        <item>старший прапорщик;8500</item>
        <item>младший лейтенант;9500</item>
        <item>лейтенант;10000</item>
        <item>старший лейтенант;10500</item>
        <item>капитан;11000</item>
        <item>майор;11500</item>
        <item>подполковник;12000</item>
        <item>полковник;13000</item>
        <item>генерал-майор;20000</item>
        <item>генерал-лейтенант;22000</item>
        <item>генерал-полковник;25000</item>
        <item>генерал армии;27000</item>
    </string-array>
    <string-array name="pcalc_ar_data_oklad">
        <item>8 000</item>
        <item>8 500</item>
        <item>9 000</item>
        <item>9 500</item>
        <item>10 000</item>
        <item>11 000</item>
        <item>12 000</item>
        <item>13 000</item>
        <item>15 000</item>
        <item>16 000</item>
        <item>17 000</item>
        <item>17 500</item>
        <item>18 000</item>
        <item>20 000</item>
        <item>20 500</item>
        <item>21 000</item>
        <item>21 500</item>
        <item>22 000</item>
        <item>22 500</item>
        <item>23 000</item>
        <item>23 500</item>
        <item>24 000</item>
        <item>24 500</item>
        <item>25 000</item>
        <item>25 500</item>
        <item>26 000</item>
        <item>26 500</item>
        <item>27 000</item>
        <item>27 500</item>
        <item>28 000</item>
        <item>28 500</item>
        <item>29 000</item>
        <item>29 500</item>
        <item>30 000</item>
        <item>30 500</item>
        <item>31 000</item>
        <item>31 500</item>
        <item>32 000</item>
        <item>32 500</item>
        <item>33 000</item>
        <item>33 500</item>
        <item>34 000</item>
        <item>34 500</item>
        <item>35 000</item>
        <item>35 500</item>
        <item>36 000</item>
        <item>36 500</item>
        <item>37 000</item>
        <item>37 500</item>
        <item>38 000</item>
        <item>40 000</item>
        <item>42 000</item>
        <item>44 000</item>
        <item>45 000</item>
    </string-array>
    <string-array name="pcalc_ar_data_oklad_0118">
        <item>8 320</item>
        <item>8 840</item>
        <item>9 360</item>
        <item>9 880</item>
        <item>10 400</item>
        <item>11 440</item>
        <item>12 480</item>
        <item>13 520</item>
        <item>15 600</item>
        <item>16 640</item>
        <item>17 680</item>
        <item>18 200</item>
        <item>18 720</item>
        <item>20 800</item>
        <item>21 320</item>
        <item>21 840</item>
        <item>22 360</item>
        <item>22 880</item>
        <item>23 400</item>
        <item>23 920</item>
        <item>24 440</item>
        <item>24 960</item>
        <item>25 480</item>
        <item>26 000</item>
        <item>26 520</item>
        <item>27 040</item>
        <item>27 560</item>
        <item>28 080</item>
        <item>28 600</item>
        <item>29 120</item>
        <item>29 640</item>
        <item>30 160</item>
        <item>30 680</item>
        <item>31 200</item>
        <item>31 720</item>
        <item>32 240</item>
        <item>32 760</item>
        <item>33 280</item>
        <item>33 800</item>
        <item>34 320</item>
        <item>34 840</item>
        <item>35 360</item>
        <item>35 880</item>
        <item>36 400</item>
        <item>36 920</item>
        <item>37 440</item>
        <item>37 960</item>
        <item>38 480</item>
        <item>39 000</item>
        <item>39 520</item>
        <item>41 600</item>
        <item>43 680</item>
        <item>45 760</item>
        <item>46 800</item>
    </string-array>
    <string-array name="pcalc_ar_data_pocent_for_pensi">
        <item>c 01.02.2017 года;72.23;4959.85</item>
        <item>c 01.01.2012 года;54.0;3178.54</item>
        <item>c 01.01.2013 года;56.0;3626.71</item>
        <item>c 01.10.2013 года;58.05;3692.35</item>
        <item>с 01.01.2014 года;60.05;3692.35</item>
        <item>c 01.10.2014 года;62.12;4323.74</item>
        <item>c 01.10.2015 года;66.78;4769.09</item>
        <item>c 01.02.2016 года;69.45;4769.09</item>
    </string-array>
    <string-array name="pcalc_ar_data_kol_igd">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3 и более</item>
    </string-array>
    <string name="pcalc_nadb_min_pens">4959.85</string>
    <string name="pcalc_nadb_100">100</string>
    <string name="pcalc_nadb_64">64</string>
    <string name="pcalc_nadb_32">32</string>
    <string name="pcalc_nadb_16">16</string>
    <string name="pcalc_help_oklad_zvan">Оклад по званию соотвествует званию перед выходом на пенсию.</string>
    <string name="pcalc_help_oklad_dolg">Должностной оклад соответствует занимаемой должности перед уходом на пенсию. Пенсионеры данную информацию могут уточнить в пенсионном органе где состоят на учете. Действующие сотрудники и военнослужащие в бухгалтерии где получают зарплату.</string>
    <string name="pcalc_help_kal_or_lgot_visl">Выслуга календарная, если есть льготная то выслугу льготную. (Чем больше выслуга тем больше процент пенсии)</string>
    <string name="pcalc_help_visl_for_procent_nadbavki">Выслуга для процентной надбавки, обычно она либо равна календарной. (От нее также зависит размер пенсии.)</string>
    <string name="pcalc_help_procent_for_pensi">Понижающий коэффициент. Денежное довольствие учитываемое при исчислении пенсии с 1 января 2012 г. в размере 54 процентов и начиная с 1 января 2013 г. ежегодно увеличивается. До достижения 100 процентов его размера. С 01.02.2016 года 69.45 процента.</string>
</resources>