<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_calculator_black_18dp"
            android:title="@string/menu_pensia_calc" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_information_black_18dp"
            android:title="@string/menu_spr_pensia" />
    </group>
    <item android:title="@string/menu_setting">
        <menu>
            <item
                android:id="@+id/nav_dopl"
                android:icon="@drawable/ic_square_inc_cash_black_18dp"
                android:title="@string/menu_setting_dopol"/>
        </menu>
    </item>
    <item android:title="@string/menu_communication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_star_black_18dp"
                android:title="@string/menu_rate" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
